# brainos

./: .gitignore  ARCHITECTURE_PLAN.md  BRANCHING.md  BrainOS-Handoff.docx  Cargo.toml  DESIGN_V2.md  LICENSE  README.md  REFERENCE.md  index.html  package-lock.json  package.json
commands/: capture.md
crates/brainos-cli/: Cargo.toml
crates/brainos-cli/src/: main.rs
crates/brainos-core/: Cargo.toml
crates/brainos-core/src/: config.rs  contradiction.rs  decay.rs  embedding.rs  entities.rs  files.rs  git_detect.rs  lib.rs  models.rs  rag.rs
crates/brainos-core/src/indexing/: indexer.rs  mod.rs  parser.rs  watcher.rs
crates/brainos-core/src/llm/: claude.rs  cli.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/brainos-core/src/search/: bm25.rs  hybrid.rs  mod.rs  vector.rs
crates/brainos-core/src/store/: db.rs  entity_queries.rs  mod.rs  queries.rs
crates/brainos-core/src/store/migrations/: 001_init.sql  002_capture_rework.sql  003_vectors.sql  004_entities.sql  005_contradictions.sql  006_workspace_roots.sql  007_workspace_files.sql  008_capture_v2_fields.sql
crates/brainos-mcp/: Cargo.toml
crates/brainos-mcp/src/: main.rs  protocol.rs  tools.rs
crates/brainos-mcp/tests/: integration.rs
docs/: capture-system-v2.md  mcp-integration.md  multi-root-and-mcp-plan.md
scripts/: test-mcp.sh
skills/brainos/: SKILL.md
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/browse/: BrowseView.tsx
src/components/chat/: ChatView.tsx
src/components/common/: MarkdownPreview.tsx
src/components/editor/: CaptureEditor.tsx
src/components/graph/: GraphPlaceholder.tsx
src/components/layout/: MainPanel.tsx  Sidebar.tsx
src/components/search/: CommandPalette.tsx  SearchBar.tsx
src/components/settings/: SettingsView.tsx
src/components/timeline/: TimelinePlaceholder.tsx
src/components/ui/: Breadcrumb.tsx  KeyboardShortcuts.tsx  MorphButton.tsx  RippleButton.tsx  Skeleton.tsx  index.ts
src/components/v2/: BrowseView.tsx  CanvasMarkdown.tsx  ChatHistorySidebar.tsx  ChatPanel.tsx  ChatPattern.tsx  ChatView.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextSidebar.tsx  DetailPanel.tsx  GlobalSearch.tsx  HomeView.tsx  MarqueeTitle.tsx  NewCaptureModal.tsx  SearchResultsView.tsx  SettingsView.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx  TopBar.tsx
src/lib/: ipc.ts  pretext.ts
src/styles/: globals.css
