[workspace]
resolver = "2"
members = [
    "crates/brainos-core",
    "crates/brainos-mcp",
    "crates/brainos-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/CyberAakash/brainos"
description = "Open-source development knowledge base with search, knowledge graph, AI chat, and MCP integration"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
sqlite-vec = "0.1"
zerocopy = "0.7"
dirs = "5"
