[package]
name = "brainos-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BrainOS desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
brainos-core = { path = "../crates/brainos-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
