[package]
name = "brainos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for BrainOS — sync, reindex, lint, stats"

[[bin]]
name = "brainos"
path = "src/main.rs"

[dependencies]
brainos-core = { path = "../brainos-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
dirs.workspace = true
