[package]
name = "brainos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for BrainOS — sync, reindex, lint, stats"

[[bin]]
name = "brainos"
path = "src/main.rs"

[dependencies]
brainos-core = { path = "../brainos-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dirs.workspace = true
