[package]
name = "brainos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for BrainOS — store, indexing, search, sync"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
sha2.workspace = true
chrono.workspace = true
notify = "7"
pulldown-cmark = "0.12"
regex = "1"
dirs = "6"
toml = "0.8"
reqwest.workspace = true
fastembed.workspace = true
sqlite-vec.workspace = true
zerocopy.workspace = true
